spade-tests/src/snapshots/spade_tests__parser__wrong_argument_list_points_to_correct_token.snap
---
source: spade-tests/src/parser.rs
---
entity foo(clk: clk, a: bool) -> bool {
    reg(clk) a = a;
    a
}

entity main(clk: clk) -> bool {
    inst foo{clk, true}
}


error: Expected argument list
  ┌─ testinput:7:5
  │
7 │     inst foo{clk, true}
  │     ^^^^^^^^ Expected argument list for this instantiation
  │
  = help: Positional argument lists start with`(`.
  = help: Named argument lists start with `$(`.

error: Use of undeclared name clk
  ┌─ testinput:1:17
  │
1 │ entity foo(clk: clk, a: bool) -> bool {
  │                 ^^^ Undeclared name
